--- a/style.css
+++ b/style.css
@@ -16,17 +16,19 @@ body {
 }
 
 .calculator {
-  background-color: #1a1a1a;
-  border: 10px solid slateblue;
+  background-color: slateblue;
   border-radius: 20px;
 }
 
 .display {
+  background-color: #1a1a1a;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-end;
   aspect-ratio: 2/1;
+  border: 10px solid slateblue;
+  border-radius: 20px;
 }
 
 .display .display-text {
@@ -61,10 +63,13 @@ body {
 }
 
 .buttons {
+  background-color: #1a1a1a;
   display: flex;
   flex-wrap: wrap;
   max-width: 50vw;
-  margin: 5px;
+  padding: 5px;
+  border: 10px solid slateblue;
+  border-radius: 20px;
 }
 
 .buttons button {
