--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: flex-end;
   aspect-ratio: 2/1;
   border: 10px solid slateblue;
   border-radius: 20px;
@@ -36,11 +35,11 @@ body {
 }
 
 .display .display-text div {
-  margin: 10px 20px;
+  margin: 5px 10px;
 }
 
 .display .display-text p {
-  margin: 5px;
+  margin: 0;
 }
 
 .display .display-operation {
