--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   background-color: #1a1a1a;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: flex-end;
   aspect-ratio: 2/1;
   border: 10px solid slateblue;
