--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 .calculator {
   background-color: slateblue;
   border-radius: 20px;
+  width: 300px;
 }
 
 .display {
@@ -66,7 +67,6 @@ body {
   background-color: #1a1a1a;
   display: flex;
   flex-wrap: wrap;
-  max-width: 50vw;
   padding: 5px;
   border: 10px solid slateblue;
   border-radius: 20px;
