Add buttons hover

--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ body {
   transition-duration: 0.1s;
 }
 
+.buttons button:hover {
+  background-color: hsl(248, 53%, 55%);
+  cursor: pointer;
+}
+
 .buttons button.zero,
 .buttons button.result {
   aspect-ratio: 2/1;
