--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
 }
 
 body {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   text-align: center;
   font-family: "Google Sans Code", monospace;
   font-optical-sizing: auto;
@@ -91,4 +93,23 @@ body {
 .buttons button.zero,
 .buttons button.result {
   aspect-ratio: 2/1;
+}
+
+a {
+  text-decoration: none;
+  color: initial;
+}
+
+img.github-logo {
+  max-width: 24px;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  height: 10vh;
+}
+
+footer p {
+  margin: 10px;
 }
